prusti-tests/tests/parse/ui/composite_fail.stderr
error: found `||` and `&&` in the same subexpression. Hint: add parentheses to clarify the evaluation order.
 --> $DIR/composite_fail.rs:8:17
  |
8 | #[requires(true && true || true)]
  |                 ^^^^^^^^^^

error: unexpected token
  --> $DIR/composite_fail.rs:11:36
   |
11 | #[requires(forall(|a: i32| a == 5) || forall(|a: i32| a == 5))]
   |                                    ^^

error: aborting due to 2 previous errors

